<resources>
    <string name="app_name">ConstraintLayoutSamples</string>
    <string name="hello_world">Hello World!</string>
    <string name="example_2"> Example 2</string>
    <string name="example_3"> Example 3</string>
    <string name="example_real"> Real Example </string>
    <string name="title_activity_example__two_">Example_Two_Activity</string>
    <string name="montreal_content_descp">Montreal City Image</string>
    <string name="title_activity_hello_world">HelloWorldActivity</string>
    <string name="big_text">I AM BIG</string>
    <string name="title_activity_example_three">ExampleThreeActivity</string>
    <string name="title_activity_chain">ChainActivity</string>
    <string name="chain_activity">Chain Activity</string>
    <string name="title_activity_guide_lines">GuideLinesActivity</string>

</resources>
